--- a/deploy-setting/nginx/nginx.conf
+++ b/deploy-setting/nginx/nginx.conf
@@ -53,7 +53,7 @@ http {
         add_header X-XSS-Protection "1; mode=block";
         add_header X-Content-Type-Options nosniff;
 
-        root /var/www/html/public;
+        root /var/www/html;
         index index.php index.html;
 
         location / {
